[project]
name = "hvac-cyber-id-grid-load-agent"
version = "0.1.0"
description = "LangGraph worker agent serving grid-load telemetry over A2A protocol."
requires-python = ">=3.13,<3.14"
dependencies = [
    "a2a-sdk>=0.2.5,<0.3.0",
    "httpx>=0.28.1",
    "langchain-google-genai>=2.0.10",
    "langgraph>=0.3.18",
    "pydantic>=2.10.6",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
    "langchain-core",
    "pandas>=2.3.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
